feat: picocli