@@ -34,14 +34,11 @@ public class ApplicationMetadata implements MetadataNode {
     private String description;
     private final List<CommandMetadata> commands;
     private final List<OptionMetadata> options;
-    // a combination of "commands" and "options"
-    private final List<OptionMetadata> cliOptions;
     private final List<ConfigValueMetadata> variables;
 
     private ApplicationMetadata() {
         this.commands = new ArrayList<>();
         this.options = new ArrayList<>();
-        this.cliOptions = new ArrayList<>();
         this.variables = new ArrayList<>();
     }
 
@@ -75,17 +72,6 @@ public class ApplicationMetadata implements MetadataNode {
         return options;
     }
 
-    /**
-     * Returns a combination of commands and options as a single collection of OptionMetadata. This is a view that
-     * the users sees on the command line. Options "shortName" property in this collection may differ from that of
-     * the original commands or options, as it is adjusted for the application context and the presence of conflicting
-     * names.
-     *
-     * @since 3.0
-     */
-    public Collection<OptionMetadata> getCliOptions() {
-        return cliOptions;
-    }
 
     /**
      * Returns a collection of metadata objects representing publicly exposed environment variables.
@@ -105,66 +91,53 @@ public class ApplicationMetadata implements MetadataNode {
         }
 
         public ApplicationMetadata build() {
-            throwOnConflictingFullNames();
-            rewriteConflictingShortNames();
+            throwOnConflictingGlobalOptions();
+            rewriteConflictingGlobalShortNames();
 
-            // set the canonical alphabetic order for display in help, etc.
-            Collections.sort(application.cliOptions, Comparator.comparing(OptionMetadata::getName));
-
+            application.options.sort(Comparator.comparing(OptionMetadata::getName));
+            application.commands.sort(Comparator.comparing(CommandMetadata::getName));
+            application.variables.sort(Comparator.comparing(ConfigValueMetadata::getName));
             return application;
         }
 
-        private void throwOnConflictingFullNames() {
-            if (application.cliOptions.size() > 1) {
-                Set<String> distinctNames = new HashSet<>();
-                application.cliOptions.forEach(om -> {
-                    if (!distinctNames.add(om.getName())) {
-                        throw new BootiqueException(1, "Duplicate option name declaration: '" + om.getName() + "'");
-                    }
-                });
-            }
+        private void throwOnConflictingGlobalOptions() {
+            Set<String> seen = new HashSet<>();
+            application.options.forEach(om -> {
+                if (!seen.add(om.getName())) {
+                    throw new BootiqueException(1, "Duplicate option name declaration: '" + om.getName() + "'");
+                }
+            });
         }
 
-        private void rewriteConflictingShortNames() {
-            // We will only disable conflicting short names in the "cliOptions" collection , leaving short names
-            // intact in the original commands and options metadata.
+        private void rewriteConflictingGlobalShortNames() {
+            // Disable conflicting short names among global options only.
+            // Command options are isolated per scope.
 
-            int len = application.cliOptions.size();
+            int len = application.options.size();
             Map<String, List<Integer>> shortNames = new HashMap<>();
             for (int i = 0; i < len; i++) {
-                shortNames.computeIfAbsent(application.cliOptions.get(i).getShortName(), sn -> new ArrayList<>(3)).add(i);
+                shortNames.computeIfAbsent(application.options.get(i).getShortName(), sn -> new ArrayList<>(3)).add(i);
             }
 
-            // wipe out short names conflicting with other short names
             for (Map.Entry<String, List<Integer>> e : shortNames.entrySet()) {
-
                 int slen = e.getValue().size();
-
-                // disable short options if there are multiple overlapping options
                 if (slen > 1) {
                     for (int i = 0; i < slen; i++) {
                         int oi = e.getValue().get(i);
-                        OptionMetadata oldOpt = application.cliOptions.get(oi);
-                        application.cliOptions.set(oi, sansShortName(oldOpt));
+                        OptionMetadata oldOpt = application.options.get(oi);
+                        application.options.set(oi, sansShortName(oldOpt));
                     }
-
-                    // clear wiped out short names so that the next check against full names doesn't generate a
-                    // conflict for the names already gone
                     e.getValue().clear();
                 }
             }
 
-            // wipe out short names conflicting with full names
-            for (OptionMetadata o : application.cliOptions) {
-
+            for (OptionMetadata o : application.options) {
                 if (o.getName().length() == 1) {
                     List<Integer> conflicting = shortNames.getOrDefault(o.getName(), List.of());
-
-                    // we no longer have multiple short name groups in "shortNames", so the size can only be 0 or 1
                     if (conflicting.size() == 1) {
-                        int i = conflicting.get(0);
-                        OptionMetadata oldOpt = application.cliOptions.get(i);
-                        application.cliOptions.set(i, sansShortName(oldOpt));
+                        int i = conflicting.getFirst();
+                        OptionMetadata oldOpt = application.options.get(i);
+                        application.options.set(i, sansShortName(oldOpt));
                     }
                 }
             }
@@ -197,8 +170,6 @@ public class ApplicationMetadata implements MetadataNode {
 
         public Builder addCommand(CommandMetadata commandMetadata) {
             application.commands.add(commandMetadata);
-            application.cliOptions.add(commandMetadata.getCommandOption());
-            commandMetadata.getOptions().forEach(application.cliOptions::add);
             return this;
         }
 
@@ -209,7 +180,6 @@ public class ApplicationMetadata implements MetadataNode {
 
         public Builder addOption(OptionMetadata option) {
             application.options.add(option);
-            application.cliOptions.add(option);
             return this;
         }
 
